Itinerary page without the housing component and the orders list page (Index) with new styling

--- a/Odin/Content/css/transferee/itinerary.scss
+++ b/Odin/Content/css/transferee/itinerary.scss
@@ -44,6 +44,7 @@ div#itinerary {
         .mmyyyy {
             color: #858585;
             font-weight: 300;
+            font-size:2rem;
         }
     }
 
