--- a/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
+++ b/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel
 
-    @using (Html.BeginForm("", "api/HomeFindingProperties",
+    @using (Html.BeginForm("", "HomeFindingProperties",
                             new { ReturnUrl = ViewBag.ReturnUrl },
-                            FormMethod.Post, new { id = "propertyForm" }))
+                            FormMethod.Post, new { id = "propertyForm", enctype = "multipart/form-data" }))
     {
         <div class="modal-body">
 
@@ -95,6 +95,14 @@
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.PropertyDescription, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.PropertyDescription, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Photos, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(model => model.Photos, new { type = "file", multiple = "true", @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Photos, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
