--- a/Odin/Views/Orders/Partials/_Appointment.cshtml
+++ b/Odin/Views/Orders/Partials/_Appointment.cshtml
@@ -1,14 +1,15 @@
 ﻿@model Odin.Data.Core.Models.Appointment
-<div id="appointmentBlock">
+<div id="appointmentModal" data-appointment-id="@Model.Id">
 	
 			@Html.DisplayNameFor(Model => Model.ScheduledDate)
-			@Html.DatePicker("date", "ScheduledDate", Model.ScheduledDate)
+			@Html.DatePicker("date", "ScheduledDate", Model.ScheduledDate.HasValue ? Model.ScheduledDate.Value.ToString():DateTime.Now.ToShortDateString())
 			@Html.DisplayNameFor(Model => Model.Description)
 			@Html.EditorFor(Model => Model.Description, new { htmlAttributes = new { @class = "form-control", @type="input", @style="max-width:100%" } })
-		</div>
-	</div>
-</div>
-@Styles.Render("~/Styling/appointment")
-<script>
 
+</div>
+@*@Styles.Render("~/Styling/appointment")*@
+<script>
+	$(document).ready(function () {
+        TransfereeAppointmentController.init();
+    });
 </script>
