Completed unit testing for the modal appointment

--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -174,5 +174,9 @@
                 app.find('.modal-body.new').html(data);
             });           
         });
+        $(".new").click(function (e) {
+            e.stopPropagation();
+            return false;
+        })
     });
 </script>
